--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <a href="www.google.com">Google</a>
-    <a href="www.facebook.com">Facebook</a>
+    <span>Hello</span>
 </body>
 </html>
