--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hello everyone</h1>
+    <P>welcome to the new course</P>
     <a href="www.google.com">Google</a>
     <span>Hello</span>
 </body>
